[gd_scene load_steps=4 format=3 uid="uid://dv3fvk7yqpxvj"]

[ext_resource type="Script" uid="uid://onl322saajc7" path="res://scripts/fills.gd" id="1_2u4w2"]
[ext_resource type="PackedScene" uid="uid://bn4m2tay0i6rj" path="res://scenes/filterable_list.tscn" id="2_dhxyd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xf4ep"]
bg_color = Color(0.272655, 0.272655, 0.272655, 1)

[node name="Fills" type="Control"]
physics_interpolation_mode = 0
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_2u4w2")
metadata/_custom_type_script = "uid://bitcditq5adw4"

[node name="FilterableList" parent="." instance=ExtResource("2_dhxyd")]

[node name="NameEdit" type="TextEdit" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 6.2
anchor_top = 23.4
anchor_right = 6.2
anchor_bottom = 23.4
offset_left = 256.0
offset_top = 920.0
offset_right = 976.0
offset_bottom = 1016.0
theme_override_constants/caret_width = 3

[node name="NameLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 928.0
offset_right = 225.0
offset_bottom = 1022.0
text = "Name:"

[node name="ListOfWords" type="TextEdit" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.4
anchor_top = 22.6
anchor_right = 26.0
anchor_bottom = 33.4
offset_left = 32.0
offset_top = 1032.0
offset_right = 1024.0
offset_bottom = 1440.0
theme_override_constants/caret_width = 3
placeholder_text = "Enter words, separated by comma"
wrap_mode = 1
caret_blink = true

[node name="Save" type="Button" parent="."]
layout_mode = 0
offset_left = 528.0
offset_top = 1480.0
offset_right = 1042.0
offset_bottom = 1582.0
text = "Add fill"

[node name="Delete" type="Button" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 1480.0
offset_right = 256.0
offset_bottom = 1582.0
text = "Delete"

[node name="Words" type="Button" parent="."]
layout_mode = 0
offset_left = 280.0
offset_top = 1480.0
offset_right = 512.0
offset_bottom = 1582.0
text = "Words"

[node name="New" type="Button" parent="."]
layout_mode = 0
offset_left = 688.0
offset_top = 792.0
offset_right = 1066.0
offset_bottom = 894.0
text = "New fill"

[node name="AreYouSure" type="Panel" parent="."]
visible = false
custom_minimum_size = Vector2(500, 500)
offset_left = 88.0
offset_top = 632.0
offset_right = 1008.0
offset_bottom = 1352.0
theme_override_styles/panel = SubResource("StyleBoxFlat_xf4ep")

[node name="Label" type="Label" parent="AreYouSure"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -284.0
offset_top = -232.0
offset_right = 284.0
offset_bottom = -89.0
grow_horizontal = 2
grow_vertical = 2
text = "Are you sure you want to delete this item?"
horizontal_alignment = 1
autowrap_mode = 2

[node name="YesDelete" type="Button" parent="AreYouSure"]
layout_mode = 0
offset_left = 208.0
offset_top = 368.0
offset_right = 688.0
offset_bottom = 446.0
theme_override_colors/font_color = Color(1, 0.407245, 0.338652, 1)
text = "Yes, delete it"

[node name="NoCancel" type="Button" parent="AreYouSure"]
layout_mode = 0
offset_left = 208.0
offset_top = 512.0
offset_right = 688.0
offset_bottom = 590.0
text = "No, cancel"

[connection signal="text_changed" from="NameEdit" to="." method="_on_words_text_changed"]
[connection signal="text_changed" from="ListOfWords" to="." method="_on_words_text_changed"]
[connection signal="pressed" from="Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="Delete" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="Words" to="." method="_on_words_pressed"]
[connection signal="pressed" from="New" to="." method="_on_new_pressed"]
[connection signal="pressed" from="AreYouSure/YesDelete" to="." method="_on_yes_delete_pressed"]
[connection signal="pressed" from="AreYouSure/NoCancel" to="." method="_on_no_cancel_pressed"]
